--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ dependencies {
     antlr "org.antlr:antlr4:4.5"
 }
 
-generateGrammarSource.arguments += ["-long-messages"]
+# generateGrammarSource.arguments += ["-long-messages"]
 generateGrammarSource.outputDirectory = new File('src/main/generated')
 
 sourceSets.main.antlr.srcDirs = ['src/main/java']
