--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
-apply plugin: 'antlr'
 apply plugin: 'application'
 
+// editor plugin dependencies
 apply plugin: 'idea'
 apply plugin: 'eclipse'
 
@@ -9,30 +9,36 @@ repositories {
     jcenter()
 }
 
+// define the main class to start
 mainClassName = "info.fulloo.trygve.editor.Main"
-
 jar {
   manifest {
     attributes 'Main-Class': 'info.fulloo.trygve.editor.Main'
   }
 }
 
+// enable assertions by default
 applicationDefaultJvmArgs = ["-ea"]
-compileJava {
-    options.fork = true
-    options.incremental = true
-}
 
+// files that need to be compiled
 sourceSets.main.java.srcDirs  = [
     'src/main/java',
     'src/main/generated'
 ]
+
+// default arguments for "gradlew run"
+run {
+    args "-gui"
+}
+
+// include files into the final distribution
 
 distZip {
     into(project.name) {
         from '.'
         include 'examples/*'
         include 'tests/*'
+        include 'LICENSE'
     }
 }
 
@@ -41,13 +47,16 @@ distTar {
         from '.'
         include 'examples/*'
         include 'tests/*'
+        include 'LICENSE'
     }
 }
 
+// add antlr to the final distribution
 dependencies {
     compile files('lib/antlr-runtime-4.5.1.jar')
 }
 
+// invokes antlr to generate parser
 task antlr(type: Exec) {
     workingDir 'src/main/java'
 
@@ -64,4 +73,10 @@ task antlr(type: Exec) {
             '-o', "$rootProject.projectDir/src/main/generated",
             'info/fulloo/trygve/parser/Kant.g4'
     }
+}
+
+// make compilation faster
+compileJava {
+    options.fork = true
+    options.incremental = true
 }
