Added dependency for grammar generation.

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,13 @@ application {
 
     // enable assertions by default
     applicationDefaultJvmArgs = ["-ea"]
+
+}
+
+build {
+    configure {
+        dependsOn generateGrammarSource
+    }
 }
 
 // make it executable
