--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,14 +3,15 @@
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
-  "configurations": [    
+  "configurations": [
     {
       "type": "java",
-      "name": "Launch trygve",
+      "name": "Debug trygve",
       "request": "launch",
       "mainClass": "info.fulloo.trygve.editor.Main",
       "projectName": "trygve",
-      "args": "-gui"
+      "args": "-gui",
+      "vmArgs": "-ea"
     }
   ]
 }
