Removed windows dir separator.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
 			"description": "Assembles and tests this project.",
 			"group": "build",
 			"project": "trygve",
-			"buildFile": "${workspaceFolder}\\build.gradle",
+			"buildFile": "${workspaceFolder}/build.gradle",
 			"rootProject": "trygve",
 			"projectFolder": "${workspaceFolder}",
 			"workspaceFolder": "${workspaceFolder}",
