Silent default build in VS Code.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,7 +17,10 @@
 			"problemMatcher": [
 				"$gradle"
 			],
-			"label": "gradle: build"
+			"label": "gradle: build",
+			"presentation": {
+				"reveal": "silent"
+			}
 		}
 	]
 }
