Added documents to the repo & to the tar/zip distributions.
Tweaked TestRunner output.

Minor cleanup in RTObject.

Removed junk tests.

--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ distZip {
         include 'examples/*'
         include 'tests/*'
         include 'LICENSE'
+        include 'doc/*'
     }
 }
 
@@ -59,5 +60,6 @@ distTar {
         include 'examples/*'
         include 'tests/*'
         include 'LICENSE'
+        include 'doc/*'
     }
 }
